🐛 FIX: player Desing

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ header h2 {
 }
 
 .player {
-  background: #f09f8b;
-  height: 220px;
+  background: #fff;
+  height: 80px;
   position: fixed;
   width: 100%;
   z-index: 2;
@@ -38,23 +38,24 @@ header h2 {
 .title,
 .artist {
   font-family: verdana;
-  left: 167px;
+  right: 103px;
   position: absolute;
-
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
 }
 .title {
-  color: #ffffff;
+  color: #000;
   font-size: 14px;
   font-weight: bold;
   top: 23px;
 }
 .artist {
-  color: #eeeeee;
+  color: #9B9B9B;
   font-size: 12px;
   top: 40px;
+  margin-top: 5px;
+
 }
 .pl {
   background: url(../images/playlist.png) no-repeat;
@@ -70,24 +71,24 @@ header h2 {
 }
 .cover {
   border-radius: 5px 5px 5px 5px;
-  height: 94px;
-  left: 20px;
+  height: 64px;
+  right: 20px;
   position: absolute;
-  top: 30px;
-  width: 94px;
+  top: 10px;
+  width: 64px;
 }
 .controls {
   cursor: pointer;
   left: 0px;
   position: absolute;
-  top: 65px;
+  top: 30px;
   left: 122px;
 }
 .controls .play,
 .controls .pause {
-  width: 60px;
-  height: 60px;
-  margin: 0 5px 0px 5px;
+  width: 25px;
+  height: 25px;
+  margin: 0px 5px;
 }
 .controls .play,
 .controls .pause,
@@ -101,32 +102,40 @@ header h2 {
 .controls .rew,
 .controls .fwd,
 .controls .stop {
-  width: 50px;
-  height: 50px;
-  margin: 5px 5px 5px 5px;
+  width: 20px;
+  height: 20px;
+  margin: 2px 7px ;
 }
 .controls .play {
   background: url(../images/play.png) no-repeat;
+  background-size: 90%;
 }
+
 .controls .pause {
   background: url(../images/pause.png) no-repeat;
   display: none;
+  background-size: 90%;
+
 }
 .controls .rew {
   background: url(../images/rewind.png) no-repeat;
+  background-size: 90%;
 }
 .controls .fwd {
   background: url(../images/next.png) no-repeat;
+  background-size: 90%;
 }
 .controls .stop {
   background: url(../images/stop.png) no-repeat;
+  background-size: 90%;
+
 }
 .hidden {
   display: none;
 }
 .controls .visible {
   display: block;
-}
+}a
 .volume {
   height: 11px;
   left: 230px;
@@ -154,51 +163,51 @@ header h2 {
 }
 .volume-adjust > div > div {
   height: 11px;
-  background: #151b48;
+  background: #33B37D;
 }
 .progressbar {
   background-color: #fff;
   cursor: pointer;
   z-index: 1;
-  right: 6.875em; /* 110 */
+  right: 6.875em;
   height: 15px;
-  left: 0px;
+  left: 25%;
   position: absolute;
-  width: 90%;
-  top: 170px;
-  margin: 0px 5%;
+  width: 50%;
+  top: 40px;
 }
 .novolume .progressbar {
   right: 4.375em; /* 70 */
 }
 .progressbar div {
   width: 0%;
-  height: 15px;
+  height: 5px;
+  border-radius: 25px;
   position: absolute;
   left: 0;
   top: 0;
 }
 .bar-loaded {
-  background-color: #f1f1f1;
+  background-color: #33B37D30;
   z-index: 1;
 }
 .bar-played {
-  background: #151b48;
+  background: #33B37D;
   z-index: 2;
 }
 .timeHolder {
-  color: #ffffff;
+  color: #000;
   font-size: 14px;
   font-weight: bold;
-  bottom: 10px;
+  top: 35px;
   position: absolute;
-  margin: 0px 5%;
   width: 90%;
+  left: 76%;
 }
 .time-current,
 .time-duration,
 .time-separator {
-  color: #ffffff;
+  color: #4C4C4C;
   font-size: 14px;
   font-weight: bold;
   float: left;
