--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   padding: 0;
 }
 body {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 header h2 {
@@ -20,8 +20,26 @@ header h2 {
 .example2,
 .example3 {
   margin: 50px auto 0;
-  width: 390px;
+  max-width: 1000px;
+  width: 100%;
   padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.more-btn {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+.more-btn img {
+  height: 30px;
+  width: 30px;
+  margin-top: 10px;
+}
+.more-btn img.up {
+  transform: rotate(180deg);
 }
 
 .player {
@@ -51,11 +69,10 @@ header h2 {
   top: 23px;
 }
 .artist {
-  color: #9B9B9B;
+  color: #9b9b9b;
   font-size: 12px;
   top: 40px;
   margin-top: 5px;
-
 }
 .pl {
   background: url(../images/playlist.png) no-repeat;
@@ -104,7 +121,7 @@ header h2 {
 .controls .stop {
   width: 20px;
   height: 20px;
-  margin: 2px 7px ;
+  margin: 2px 7px;
 }
 .controls .play {
   background: url(../images/play.png) no-repeat;
@@ -115,7 +132,6 @@ header h2 {
   background: url(../images/pause.png) no-repeat;
   display: none;
   background-size: 90%;
-
 }
 .controls .rew {
   background: url(../images/rewind.png) no-repeat;
@@ -128,15 +144,14 @@ header h2 {
 .controls .stop {
   background: url(../images/stop.png) no-repeat;
   background-size: 90%;
-
 }
 .hidden {
   display: none;
 }
 .controls .visible {
   display: block;
-}a
-.volume {
+}
+a .volume {
   height: 11px;
   left: 230px;
   position: absolute;
@@ -163,7 +178,7 @@ header h2 {
 }
 .volume-adjust > div > div {
   height: 11px;
-  background: #33B37D;
+  background: #33b37d;
 }
 .progressbar {
   background-color: #fff;
@@ -188,11 +203,11 @@ header h2 {
   top: 0;
 }
 .bar-loaded {
-  background-color: #33B37D30;
+  background-color: #33b37d30;
   z-index: 1;
 }
 .bar-played {
-  background: #33B37D;
+  background: #33b37d;
   z-index: 2;
 }
 .timeHolder {
@@ -207,7 +222,7 @@ header h2 {
 .time-current,
 .time-duration,
 .time-separator {
-  color: #4C4C4C;
+  color: #4c4c4c;
   font-size: 14px;
   font-weight: bold;
   float: left;
@@ -245,7 +260,6 @@ header h2 {
 .playlist div > a {
   color: #151b48;
   text-decoration: none;
- 
 }
 .playlist li.active,
 .playlist div.active {
@@ -257,14 +271,18 @@ header h2 {
 .slick-dots li button:before {
   font-size: 8px !important;
 }
-p.caption{
+p.caption {
   font-size: small;
-  color:#868686
+  color: #868686;
 }
 
-img.play{
+img.play {
   height: 20px;
   width: 20px;
   position: absolute;
   left: 20px;
+}
+
+.playlist-item.extra {
+  display: none;
 }
